图片上下文点击出现菜单

--- a/多种类型菜单/多种类型菜单/Base.lproj/Main.storyboard
+++ b/多种类型菜单/多种类型菜单/Base.lproj/Main.storyboard
@@ -15,10 +15,22 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="pencil.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Nlg-uQ-LSr">
+                                <rect key="frame" x="145" y="447" width="172" height="154"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Nlg-uQ-LSr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QBZ-wu-MQ9"/>
+                            <constraint firstItem="Nlg-uQ-LSr" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bHc-IW-dFX"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="KVX-G3-Fgc"/>
+                    <connections>
+                        <outlet property="imgs" destination="Nlg-uQ-LSr" id="mnZ-Vu-Gw3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -44,6 +56,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="pencil.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
